@@ -5,6 +5,7 @@ Changelog
 ---------------------
 
 - Fix id normalization when setting up a repository. [tinagerber]
+- Fix createContentInContainer to respect behaviors. [njohner]
 - Allow workspace members to trash and untrash documents in workspaces. [tinagerber]
 - Handle wildcard in date filters in listing endpoint. [njohner]
 - Handle multiple content interfaces in @navigation endpoint. [njohner]
